trunk/Archive2/1f/0c6120972461d9/output
main.cpp:11:9: error: identifier 'STRING' in object destruction expression does not name a type
    a->~STRING();
        ^
1 error generated.
