trunk/Archive2/1f/0c6120972461d9/main.cpp
#include <iostream>

namespace STD
{
class BASIC_STRING {};
typedef BASIC_STRING STRING;
}

int main() {
    STD::STRING* a = new STD::STRING();
    a->~STRING();
}